--- a/Screens Challenge/app/src/main/res/values/strings.xml
+++ b/Screens Challenge/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 	<string name="app_name">ScreensChallenge</string>
 
-	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
-	<string name="title_activity_second">SecondActivity</string>
+	<string name="title_activity_login">Login Screenlet</string>
+	<string name="title_activity_second">Form Screenlet</string>
 </resources>
